--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,10 @@ body {
     "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  overflow-x: hidden;
+  transition: 300ms;
 }
+
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
@@ -31,7 +34,7 @@ code {
   width: 1.5rem;
   height: 1.5rem;
   padding: 0;
-  background-color: #d12881;
+  background-color: orange;
   border-radius: 50%;
   
 }
